--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="css/animate.min.css" type="text/css">
 
+    <link href="//cdn.bootcss.com/mermaid/0.5.8/mermaid.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/creative.css" type="text/css">
+    <link rel="stylesheet" href="css/case.css" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -180,7 +182,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-              <div class="modal-body">
+              <div class="modal-body case-md">
                 @@include('cases/<%= case_.id %>.html')
               </div>
             </div>
@@ -202,6 +204,21 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/creative.js"></script>
+    <script src="//cdn.bootcss.com/js-url/2.1.0/url.min.js"></script>
+    <script src="//cdn.bootcss.com/mermaid/0.5.8/mermaidAPI.min.js"></script>
+    <script>
+      mermaidAPI.initialize({startOnLoad:true});
+      $(function () {
+        $('.mermaid').each(function (idx) {
+          var def = $(this).text();
+          $('body').append($('<div id="mermaid-graph' + idx + '"></div>'));
+          var $that = $(this);
+          mermaidAPI.render('mermaid-graph' + idx, def, function(svgCode, bindFunctions){
+            $that.html(svgCode);
+          });
+        });
+      });
+    </script>
 
   </body>
 
